--- a/backend/package.json
+++ b/backend/package.json
@@ -13,11 +13,13 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "ethers": "^6.15.0",
     "express": "^4.18.2",
     "form-data": "^4.0.4",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.3.0",
     "multer": "^2.0.2",
+    "node-jose": "^2.2.0",
     "nodemon": "^3.0.1",
     "uuid": "^9.0.0"
   }
